--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Hexamix.GitHub.io by hexamix</title>
+    <title>Hexamix Realm</title>
 
     <link rel="stylesheet" href="assets/stylesheet/styles.css">
     <link rel="stylesheet" href="assets/stylesheets/github-light.css">
